# Warpsmith

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .test-credentials  AGENTS.md  CHANGELOG.md  DEV_INDEX.md  Dockerfile  INDEX.md  README.md  RELEASE.md  ROADMAP.html  ROADMAP.md  _compile.py  _fix_api_replays.py  app.json  docker-compose.yml  main.py  pyproject.toml  railway.json  requirements.txt  script_fix.py  simulator.db-shm  simulator.db-wal  test.txt
.github/workflows/: ci.yml  deploy.yml
backend/: __init__.py  logging_setup.py
backend/ai/: __init__.py
backend/auth/: __init__.py
backend/billing/: plans.py  stripe_stub.py  webhooks.py
backend/db/: __init__.py  database.py
backend/engine/: __init__.py  combat.py  dice.py  modifiers.py  replay.py  scenario.py  stratagems.py
backend/loader/: __init__.py  compiler.py  icon_map.py  parser.py  registry.py  schema.py
backend/model/: __init__.py  unit.py
backend/reporter/: __init__.py
backend/security/: headers.py
backend/state/: __init__.py  game_state.py  leader_checker.py  line_of_sight.py  map.py  mission.py  roster.py  runtime_id.py
backups/: simulator_backup_20260504_201724_metadata.json
deploy/: dokku-setup.sh  railway.json  systemd.service
docs/: __init__.py  deployment.md
docs/api/: endpoints.md
docs/architecture/: ADR.md  C4.md  __init__.py  regression-test-protocol.md
docs/features/: Features_index.md  f1.1-unit-dataclass.md  f1.10-pmf-chart.md  f1.11-round-viewer-stub.md  f1.12-multiattack.md  f1.13-weapon-keywords-phase2.md  f1.2-weapon-dataclass.md  f1.3-modifier-system.md  f1.4-wiki-loader.md  f1.5-dice-pool.md  f1.6-combat-sequence.md  f1.7-weapon-keywords.md  f1.8-tests.md  f1.9-api-simulate.md  f2.1-game-state.md  f2.10-roster-crud.md  f2.11-team-builder-ui.md  f2.12-leader-compatibility.md  f2.13-cover-terrain.md  f2.14-deep-strike.md  f2.14-primary-missions.md  f2.15-primary-missions.md  f2.15-shooting-refinements.md  f2.16-shooting-refinements.md  f2.17-secondary-missions.md  f2.18-terrain-mechanics-10e.md  f2.2-2d-map.md  f2.3-line-of-sight.md  f2.4-missions.md  f2.5-game-loop.md  f2.6-phase-transitions.md  f2.7-battle-shock-cp-stratagems.md  f2.8-victory-points.md  f2.9-roster-validation.md  f3.1-greedy-decision-engine.md  f3.10-waaagh.md  f3.11-ftgg-markerlight.md  f3.2-faction-ai-profiles.md  f3.2-ork-ai.md  f3.3-tau-ai.md  (+30 more)
docs/remediation/: index.md  (+33 more)
log/: logs.1777922902738.json
ref_data/: admech_full.json  admech_ref.json  orks_ref.json  tau_ref.json
scripts/: backup_db.py  restore_db.py  smoke_final_gate.py  test_backup_system.py
tests/: __init__.py  conftest.py  test_ai_decision.py  test_autoplay.py  test_canvas_map.py  test_combat.py  test_content_contracts.py  test_coverage.py  test_deployment_ai.py  test_detachment_picker.py  test_dice.py  test_docker.py  test_f2_7_battle_shock_cp_stratagems.py  test_faction_ai.py  test_faction_browser.py  test_final_gate_smoke.py  test_game_state.py  test_generate_roster.py  test_icon_map.py  test_leader_checker.py  test_line_of_sight.py  test_logging.py  test_map.py  test_mission.py  test_modifiers.py  test_movement.py  test_parse_log_events.py  test_parser.py  test_phase_transitions.py  test_pmf_chart.py  test_progressive_disclosure.py  test_rate_limit.py  test_replay.py  test_result_screen.py  test_roster.py  test_rosters.py  test_round_viewer.py  test_runtime_id.py  test_scenario.py  test_security_headers.py  (+8 more)
ui/: __init__.py
web/: __init__.py
wiki/: SCHEMA.md  WIKI_INDEX.md
(+620 files in other folders)
